Big Update +new Method +Swagger +fix DB
